# kniha-jazd

./: .coderabbit.yaml  .dockerignore  .gitignore  .typesafe-i18n.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile.web  README.en.md  README.md  _code-review.md  docker-compose.web.yml  local.settings.json.sample  package-lock.json  package.json  playwright.config.ts
.claude/: settings.json
.claude/commands/: changelog.md  decision.md  release.md  task-plan.md  verify.md
.claude/hooks/: post-commit-reminder.ps1  post-commit-reminder.sh  pre-commit.ps1
.claude/rules/: integration-tests.md  migrations.md  rust-backend.md  svelte-frontend.md
.claude/skills/: release.md
.github/workflows/: release.yml  test.yml
_tasks/: CLAUDE.md  TODOS.md  index.md
_tasks/01-diesel-migration/: 02-plan.md  _plan-review.md
_tasks/01-init/: 02-design.md
_tasks/02-testing-flow/: 01-task.md
_tasks/16-i18n/: 01-task.md
_test-releases/: .gitignore  README.md  latest.json  serve.js
docs/: CLAUDE.md
scripts/: compare_import.py  create_showcase_db.py  import_excel.py  migrate_local_to_paperless.py  run-with-debug.ps1  stage-spa.mjs  test-release.ps1
src-tauri/: .gitignore  Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/migrations/2026-01-08-095218-0000_baseline/: down.sql
src-tauri/core/migrations/2026-01-09-100000-add_vehicle_metadata/: down.sql
src-tauri/core/migrations/2026-01-12-155106-add_receipt_cost_fields/: down.sql
src-tauri/core/migrations/2026-01-21-100000-add_receipt_currency/: down.sql
src-tauri/core/migrations/2026-01-21-110000_backfill_receipt_currency/: up.sql
src-tauri/core/migrations/2026-01-27-000000_add_trip_datetime/: down.sql  up.sql
src-tauri/core/migrations/2026-01-27-100000_add_vehicle_ha_sensor/: up.sql
src-tauri/core/migrations/2026-01-29-100000_add_trip_end_time/: down.sql
src-tauri/core/migrations/2026-01-30-100000_drop_legacy_datetime_columns/: up.sql
src-tauri/core/migrations/2026-05-03-100000_add_paperless_trip_links/: down.sql  up.sql
src-tauri/core/migrations/2026-05-21-100000_drop_sort_order/: down.sql  up.sql
src-tauri/core/migrations/2026-07-15-100000_multi_invoice/: down.sql  up.sql
src-tauri/core/src/: app_state.rs  constants.rs  db.rs  db_tests.rs  export.rs  export_tests.rs  invoice.rs  invoice_tests.rs  lib.rs  migration_tests.rs  models.rs  paperless.rs  paperless_tests.rs  receipts_tests.rs  schema.rs  settings.rs  settings_tests.rs
src-tauri/core/src/calculations/: mod.rs  phev.rs  tests.rs
src-tauri/core/src/commands_internal/: backup.rs  commands_tests.rs  export_cmd.rs  helpers.rs  integrations.rs  integrations_tests.rs  invoices.rs  invoices_tests.rs  mod.rs  paperless_cmd.rs  paperless_cmd_tests.rs  receipts_cmd.rs  settings_cmd.rs  statistics.rs  trips.rs  vehicles.rs
src-tauri/core/src/server/: dispatcher.rs  dispatcher_async.rs  manager.rs  mod.rs
src-tauri/desktop/: Cargo.toml  diesel.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/desktop/capabilities/: default.json
src-tauri/desktop/migrations/2026-01-09-100000-add_vehicle_metadata/: up.sql
src-tauri/desktop/migrations/2026-01-12-155106-add_receipt_cost_fields/: up.sql
src-tauri/desktop/migrations/2026-01-21-100000-add_receipt_currency/: up.sql
src-tauri/desktop/migrations/2026-01-21-110000_backfill_receipt_currency/: down.sql
src-tauri/desktop/migrations/2026-01-29-193744-0000_add_start_end_datetime/: up.sql
src-tauri/desktop/migrations/2026-02-03-100000_receipt_assignment_type/: up.sql
src-tauri/desktop/migrations/2026-02-04-100000_remove_assigned_status/: down.sql
src-tauri/desktop/migrations/2026-02-12-100000_add_vehicle_ha_fuel_level_sensor/: up.sql
src-tauri/desktop/src/: constants.rs  db_tests.rs  export_tests.rs  gemini.rs  lib.rs  schema.rs  settings.rs  static_dir.rs
src-tauri/desktop/src/calculations/: mod.rs  phev_tests.rs  time_inference.rs
src-tauri/desktop/src/commands/: backup.rs  commands_tests.rs  export_cmd.rs  integrations.rs  invoices.rs  mod.rs  receipts_cmd.rs  server_cmd.rs  settings_cmd.rs  statistics.rs  trips.rs  vehicles.rs
src-tauri/desktop/src/server/: dispatcher.rs  dispatcher_async.rs  mod.rs
src-tauri/migrations/: 001_initial.sql  002_add_initial_odometer.sql  003_rename_filler_to_buffer.sql  004_add_full_tank.sql  005_add_ev_support.sql  006_make_fuel_fields_nullable.sql
src-tauri/migrations/2026-01-08-095218-0000_baseline/: up.sql
src-tauri/migrations/2026-01-22-100000-fix_confidence_camelcase/: down.sql  up.sql
src-tauri/migrations/2026-01-27-100000_add_vehicle_ha_sensor/: down.sql
src-tauri/migrations/2026-01-29-100000_add_trip_end_time/: up.sql
src-tauri/migrations/2026-01-29-193744-0000_add_start_end_datetime/: down.sql
src-tauri/migrations/2026-01-30-100000_drop_legacy_datetime_columns/: down.sql  up.sql
src-tauri/migrations/2026-02-01-100000_replace_receipt_date_with_datetime/: down.sql  up.sql
src-tauri/migrations/2026-02-03-100000_receipt_assignment_type/: down.sql
src-tauri/migrations/2026-02-04-100000_remove_assigned_status/: up.sql
src-tauri/migrations/2026-02-11-100000_add_vehicle_ha_fillup_sensor/: down.sql  up.sql
src-tauri/src/: app_state.rs  calculations.rs  calculations_energy.rs  calculations_energy_tests.rs  calculations_phev.rs  calculations_phev_tests.rs  calculations_tests.rs  commands.rs  commands_tests.rs  constants.rs  db.rs  db_location.rs  db_tests.rs  error.rs  export.rs  gemini.rs  gemini_tests.rs  lib.rs  models.rs  receipts.rs  receipts_tests.rs  schema.rs  settings.rs  settings_tests.rs  suggestions.rs  suggestions_tests.rs
src-tauri/src/calculations/: energy.rs  energy_tests.rs  mod.rs  tests.rs
src-tauri/src/commands/: backup.rs  commands_tests.rs  export_cmd.rs  integrations.rs  mod.rs  receipts_cmd.rs  server_cmd.rs  settings_cmd.rs  statistics.rs  trips.rs  vehicles.rs
src-tauri/src/server/: dispatcher.rs  mod.rs
src-tauri/web/: Cargo.toml
src-tauri/web/src/: main.rs
tests/: CLAUDE.md
(+440 files in other folders)
