[package]
name = "kniha-jazd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Vehicle logbook core library — DB, calculations, command internals"

[lib]
name = "kniha_jazd_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
diesel = { version = "2.2", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
diesel_migrations = "2.2"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
